third_party/move/move-compiler-v2/tests/bytecode-generator/matching_exhaustive_err.exp
// -- Model dump before bytecode pipeline
module 0xc0ffee::m {
    struct Box {
        x: u64,
    }
    enum Inner {
        Inner1 {
            x: u64,
        }
        Inner2 {
            x: u64,
            y: u64,
        }
    }
    enum Outer {
        None,
        One {
            i: m::Inner,
        }
        Two {
            i: m::Inner,
            b: m::Box,
        }
    }
    public fun exhaustive_tuple(i: &m::Inner) {
        match (Tuple(i, i)) {
          (m::Inner::Inner1{ x: _ }, _: &m::Inner): (&m::Inner, &m::Inner) => {
            Tuple()
          }
          (m::Inner::Inner2{ x: _, y: _ }, _: &m::Inner): (&m::Inner, &m::Inner) => {
            Tuple()
          }
        }

    }
    public fun exhaustive_via_merge(o: &m::Outer) {
        match (o) {
          m::Outer::None => {
            Tuple()
          }
          m::Outer::One{ i: m::Inner::Inner1{ x: _ } } => {
            Tuple()
          }
          m::Outer::One{ i: m::Inner::Inner2{ x: _, y: _ } } => {
            Tuple()
          }
          m::Outer::Two{ i: _, b: _ } => {
            Tuple()
          }
        }

    }
    public fun non_exhaustive(o: &m::Outer) {
        match (o) {
          m::Outer::None => {
            Tuple()
          }
          m::Outer::One{ i: _ } => {
            Tuple()
          }
        }

    }
    public fun non_exhaustive_because_of_cond(o: &m::Outer) {
        match (o) {
          m::Outer::None => {
            Tuple()
          }
          m::Outer::One{ i: _ } => {
            Tuple()
          }
          m::Outer::Two{ i: _, b } if Gt<u64>(select m::Box.x<&m::Box>(b), 0) => {
            Tuple()
          }
        }

    }
    public fun non_exhaustive_because_of_nested(o: &m::Outer) {
        match (o) {
          m::Outer::None => {
            Tuple()
          }
          m::Outer::One{ i: m::Inner::Inner1{ x: _ } } => {
            Tuple()
          }
          m::Outer::Two{ i: _, b: _ } => {
            Tuple()
          }
        }

    }
    public fun non_exhaustive_tuple(i: &m::Inner) {
        match (Tuple(i, i)) {
          (m::Inner::Inner1{ x: _ }, _: &m::Inner): (&m::Inner, &m::Inner) => {
            Tuple()
          }
        }

    }
    public fun non_exhaustive_tuple2(i: &m::Inner) {
        match (Tuple(i, i)) {
          (m::Inner::Inner1{ x: _ }, _: &m::Inner): (&m::Inner, &m::Inner) => {
            Tuple()
          }
          (_: &m::Inner, m::Inner::Inner2{ x: _, y: _ }): (&m::Inner, &m::Inner) => {
            Tuple()
          }
        }

    }
} // end 0xc0ffee::m


Diagnostics:
error: match not exhaustive
   ┌─ tests/bytecode-generator/matching_exhaustive_err.move:19:16
   │
19 │         match (o) {
   │                ^
   │
   = missing `Outer::Two{..}`

error: match not exhaustive
   ┌─ tests/bytecode-generator/matching_exhaustive_err.move:26:16
   │
26 │         match (o) {
   │                ^
   │
   = missing `Outer::Two{..}`

error: match not exhaustive
   ┌─ tests/bytecode-generator/matching_exhaustive_err.move:34:16
   │
34 │         match (o) {
   │                ^
   │
   = missing `Outer::One{i: Inner::Inner2{..}}`

error: match not exhaustive
   ┌─ tests/bytecode-generator/matching_exhaustive_err.move:50:16
   │
50 │         match ((i, i)) {
   │                ^^^^^^
   │
   = missing `(Inner::Inner2{..},_)`

error: match not exhaustive
   ┌─ tests/bytecode-generator/matching_exhaustive_err.move:63:16
   │
63 │         match ((i, i)) {
   │                ^^^^^^
   │
   = missing `(_,Inner::Inner1{..})`
   = missing `(Inner::Inner2{..},_)`
